--- a/other/file-flume-kafka.conf
+++ b/other/file-flume-kafka.conf
@@ -5,7 +5,7 @@ a1.channels=c1 c2
 a1.sources.r1.type=TAILDIR
 a1.sources.r1.positionFile=/opt/module/flume/test/log_position.json
 a1.sources.r1.filegroups=f1
-a1.sources.r1.filegroups.f1=/tmp/logs/app.+
+a1.sources.r1.filegroups.f1=/tmp/logs/.+
 a1.sources.r1.fileHeader=true
 a1.sources.r1.channels=c1 c2
 
